--- a/html/index.html
+++ b/html/index.html
@@ -1152,11 +1152,20 @@
     </div>
 
     <!-- Payment Receipt Modal (Success Slip) -->
-    <div class="modal hidden" id="receiptModal" style="z-index: 10002;">
+    <div class="modal hidden" id="receiptModal" style="z-index: 10002;"
+        onclick="if(event.target === this) closeReceiptModal()">
         <div class="modal-content"
-            style="max-width: 400px; padding: 0; background: #f8fafc; overflow: hidden; border-radius: 20px;">
+            style="max-width: 400px; padding: 0; background: #f8fafc; overflow: hidden; border-radius: 20px; position: relative;">
             <!-- Success Header -->
-            <div style="background: #10b981; padding: 2rem; text-align: center; color: white;">
+            <div style="background: #10b981; padding: 2rem; text-align: center; color: white; position: relative;">
+                <!-- X Close Button -->
+                <button onclick="closeReceiptModal()"
+                    style="position: absolute; top: 15px; right: 15px; background: rgba(255,255,255,0.2); border: none; color: white; width: 32px; height: 32px; border-radius: 50%; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 18px; transition: background 0.2s;"
+                    onmouseover="this.style.background='rgba(255,255,255,0.3)'"
+                    onmouseout="this.style.background='rgba(255,255,255,0.2)'">
+                    ✕
+                </button>
+
                 <div
                     style="background: rgba(255,255,255,0.2); width: 64px; height: 64px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 1rem;">
                     <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
