Update admin credentials

--- a/html/admin-login.html
+++ b/html/admin-login.html
@@ -139,7 +139,7 @@
         <form id="adminLoginForm">
             <div class="form-group">
                 <label>Email</label>
-                <input type="email" id="email" value="admin@voicebox.com" required>
+                <input type="email" id="email" value="mohdubes8860@gmail.com" required>
             </div>
             <div class="form-group">
                 <label>Password</label>
@@ -166,7 +166,7 @@
             const password = document.getElementById('password').value;
 
             // Hardcoded admin credentials
-            if (email === 'admin@voicebox.com' && password === 'admin123') {
+            if (email === 'mohdubes8860@gmail.com' && password === 'admin123') {
                 const adminUser = {
                     uid: 'admin_' + Date.now(),
                     email: email,
