--- a/html/admin-login.html
+++ b/html/admin-login.html
@@ -272,13 +272,19 @@
             })
                 .then(res => res.json())
                 .then(data => {
-                    alert(`DEMO MODE: Valid Key Needed for Email.\nYour OTP is: ${generatedOTP}`);
+                    if (data.success) {
+                        alert(`✅ OTP sent to ${currentCreds.email}\n\nPlease check your Inbox (and Spam folder).`);
+                    } else {
+                        // Fallback for demo/invalid key (Silent console log for safety)
+                        console.warn('📧 Email failed, check Access Key. Backup OTP:', generatedOTP);
+                        alert(`⚠️ Email Service Error.\n\nMake sure your Web3Forms Access Key is valid.\n(Check Console F12 if needed)`);
+                    }
                     document.getElementById('otpStep1').style.display = 'none';
                     document.getElementById('otpStep2').style.display = 'block';
                 })
                 .catch(err => {
-                    alert('Connection Error. Check Console for OTP.');
-                    console.log('OTP:', generatedOTP);
+                    console.error('Network Error. Backup OTP:', generatedOTP);
+                    alert('❌ Network connection failed. Please try again.');
                 })
                 .finally(() => {
                     btn.textContent = originalText;
