Update API Key provided by user

--- a/html/admin-login.html
+++ b/html/admin-login.html
@@ -259,7 +259,8 @@
             console.log('🔒 OTP:', generatedOTP);
 
             const formData = {
-                access_key: "4e8f7c2d-1a3b-4f5e-9d2c-6b8a1e3f7c9d",
+                // User Provided Key
+                access_key: "AIzaSyDLUsKGC6cebEXHTTh_m3NDE8EZKEpOZs4",
                 to_email: currentCreds.email,
                 subject: "🔐 Admin Login Verification Code",
                 message: `Your OTP is: ${generatedOTP}`
